# tempestextremes

./: '  .gitignore  Announce.cpp  Announce.h  AppendNodeData.cpp  AvgIPV  Blocks  CLIVAR_block_utilities.cpp  CLIVAR_block_utilities.h  CLIVAR_blocks  CLIVAR_blocks.cpp  CLIVAR_blocks.h  CMakeLists.txt  CommandLine.h  DataMatrix3D.h  DataMatrix4D.h  DensityNodes  DensityNodes.cpp  DetectCyclones.cpp  DetectCyclonesUnstructured.cpp  DevIPV  ERA_2013_files.txt  ERA_blocking_controls.sh  ERA_in.txt  ERA_output.txt  Exception.h  LICENSE  Makefile  NetCDFUtilities.h  PV_blocking_controls.sh  README.md  StitchBlobs.cpp  StitchNodes.cpp  TimeObj.cpp  TimeObj.h  annotated_StitchBlobs_mpi_new.txt  annotated_StitchBlobs_mpi_old.txt  blockingAvg  blockingAvg.cpp  blockingDensity  (+44 more)
CMake/: FindNetCDF.cmake
analysis/blobmetrics/: gen_blank_setupfile.R  generateReport.R  intercomparison.R  pearson.R  readnetcdf.R  readtable.R  summarize.R
doc/: TempestExtremes-UserGuide.aux  TempestExtremes-UserGuide.dvi  TempestExtremes-UserGuide.idx  TempestExtremes-UserGuide.ilg  TempestExtremes-UserGuide.ind  TempestExtremes-UserGuide.out  TempestExtremes-UserGuide.tex  TempestExtremes-UserGuide.toc
mk/: config.make  defs.make  framework.make  rules.make  system.make
src/: Announce.cpp  AppendNodeData.cpp  CLIVAR_block_utilities.cpp  CLIVAR_block_utilities.h  CMakeLists.txt  DataMatrix.h  DetectCyclones.cpp  DetectCyclonesUnstructured.cpp  HistogramNodes.cpp  Make.defs  Makefile  SimpleGrid.h  StitchBlobs.cpp  StitchNodes.cpp  TimeObj.cpp  Variable.cpp  Variable.h  blockingAvg.cpp  blockingDevs.cpp  blockingGH.cpp  blockingPV.cpp  interpolate.cpp  interpolate.h  moving_avg.cpp  var4Dto3D.cpp
src/atmrivers/: CMakeLists.txt  JiangARs.cpp  Makefile  SpineARs.cpp  SpineARs_v2.cpp
src/base/: Announce.cpp  Announce.h  ArgumentTree.cpp  ArgumentTree.h  AutoCurator.cpp  AutoCurator.h  CMakeLists.txt  CommandLine.h  Constants.h  CoordTransforms.h  DataArray1D.h  DataArray2D.h  DataArray3D.h  DataArray4D.h  DataOp.cpp  DataOp.h  DataVector.h  Defines.h  Exception.h  FilenameList.h  FiniteElementTools.cpp  FiniteElementTools.h  FourierTransforms.h  FunctionTimer.cpp  FunctionTimer.h  GaussLobattoQuadrature.cpp  GaussLobattoQuadrature.h  GaussQuadrature.cpp  GaussQuadrature.h  GridElements.cpp  GridElements.h  LatLonBox.h  LegendrePolynomial.cpp  LegendrePolynomial.h  Makefile  MathExpression.h  MeshUtilities.cpp  MeshUtilities.h  MeshUtilitiesFuzzy.cpp  MeshUtilitiesFuzzy.h  (+31 more)
src/base/depend/: Announce.d  NetCDFUtilities.d  TimeObj.d  Variable.d  kdtree.d
src/blobmetrics/: blank_setupfile.R  download_libraries.R  gen_blank_setupfile.R  generateNamelist.R  intercomparison.R  pearsonrmse.R  readfiles.R  report_template.Rmd  setup_full.R  stitch_metric_framework.R
src/blobmetrics/doc/: BlobMetrics-UserGuide.aux  BlobMetrics-UserGuide.tex  BlobMetrics-UserGuide.toc
src/blobmetrics/examples/: DJF_NP_CMCC-CESM-RCP8.5_CMCC-CESM_JRA_MERRA_CFSR_ERA_report.html  JJA_SP_JRA_MERRA_CFSR_ERA_report.html  setup_full.R  setup_reanalysis.R
src/blobmetrics/python/: calcBlockIndices.py  mergeStats.py  readStats.py  summStats.py
src/blobs/: BlobStats.cpp  BlobUtilities.h  CMakeLists.txt  DetectBlobs.cpp  Makefile  PersistentBlobs.cpp  StitchBlobs.cpp  StitchBlobsMPIDebug.h  StitchBlobsMPIUtilities.h  StitchBlobs_old.cpp
src/blobs/depend/: StitchBlobs.d
src/blocking/: AvgDFT.cpp  AvgVar.cpp  BlockingAvg.cpp  BlockingAvgOld.cpp  BlockingDFT.cpp  BlockingDevs.cpp  BlockingGH.cpp  BlockingGHG.cpp  BlockingGHG_old.cpp  BlockingNormDevs.cpp  BlockingPV.cpp  BlockingThresh.cpp  BlockingUtilities.cpp  BlockingUtilities.h  BlockingZThresh.cpp  CMakeLists.txt  CombineBlobs.cpp  DFT.cpp  DFT.h  DailyAverage.cpp  DensityCalculations.cpp  DetrendHeights.cpp  DevIPV.cpp  ExtractTimeStep.cpp  Interp_z500.cpp  Interp_z500.h  Interpolate.cpp  Interpolate.h  Makefile  Read_test.cpp  Smooth60Day.cpp  Smooth61Day.cpp  SplitFile.cpp  Var4Dto3D.cpp  avgVar.cpp  calcLinReg.py  split_file.cpp
src/blocking/depend/: BlockingAvg.d  BlockingDevs.d  BlockingGH.d  BlockingPV.d  BlockingUtilities.d  DensityCalculations.d  Interp_z500.d  Interpolate.d  Read_test.d  Var4Dto3D.d
src/metrics/: CMakeLists.txt  HeatWaveMetrics.cpp  Makefile
src/netcdf-cxx-4.2/: CMakeLists.txt  Makefile  config.h  ncvalues.cpp  ncvalues.h  netcdf.cpp  netcdfcpp.h
src/nodes/: CMakeLists.txt  CalculatePosthocOutput.cpp  CalculationList.cpp  CalculationList.h  ClosedContourOp.h  DetectCyclones.cpp  DetectCyclonesUnstructured.cpp  DetectNodes.cpp  HistogramNodes.cpp  Makefile  NodeFileCompose.cpp  NodeFileEditor.cpp  NodeFileFilter.cpp  NodeFileFilter2.cpp  NodeOutputOp.h  StitchNodes.cpp  ThresholdOp.h
src/nodes/depend/: AppendNodeData.d  DensityNodes.d  DetectCyclones.d  DetectCyclonesUnstructured.d  HistogramNodes.d  StitchNodes.d
src/sandbox/: CMakeLists.txt  CompressBlobs.cpp  Makefile  SpineARs.cpp
src/util/: AccumulateData.cpp  AccumulateERA5Forecast.cpp  AutoCuratorTool.cpp  CMakeLists.txt  Climatology.cpp  CompressBlobs.cpp  FourierFilter.cpp  GenerateConnectivityFile.cpp  GenerateNearestNeighborMap.cpp  IntegrateDimension.cpp  LagrangianParcelTracker.cpp  Makefile  QuantileCalculator.cpp  QuickVis.cpp  ShapefileMask.cpp  VariableProcessor.cpp
test/: AVG_blocking_controls.sh  CLIVAR_BLOBS_GH_LOOP.sh  CLIVAR_BLOBS_LOOP.sh  CLIVAR_BLOBS_PV_LOOP.sh  DENS_blocking_controls.sh  DEV_blocking_controls.sh  ERA_BLOBS_LOOP.sh  ERA_GHAnom_controls.sh  ERA_GH_controls.sh  ERA_GH_list  ERA_PY_compare.sh  ERA_blocking_controls.sh  GH_dev_out  GH_script.sh  PV_blocking_controls.sh  PV_script.sh  ParseBlobFuncs.py  ParseBlobStats.py  Untitled.R  bloblist  block_overlaps.R  block_overlaps_new.R  block_overlaps_table_out.R  center_tracking.R  charts_stats.R  combine_dens_files.R  composite_similarity_new.R  densityCalc.py  eur_cold_spell.R  eur_heat_overlaps.R  eur_heat_wave.R  gen_new_figs.R  gen_pics_sim_overlaps.R  gen_table_stats_nostitch.R  gen_table_stats_stitch.R  merge_stitch_detect.R  mk_GH_avg.sh  mk_avg.sh  mk_list_CLIVAR.sh  mk_list_CLIVAR_GH.sh  (+26 more)
(+538 files in other folders)
