# Copyright (c) 2025      Kian Huang
#
# Distributed under the Boost Software License, Version 1.0. (See accompanying
# file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)

add_subdirectory(netcdf-cxx-4.2)
add_subdirectory(base)
add_subdirectory(atmrivers)
add_subdirectory(blobs)
add_subdirectory(blocking)
add_subdirectory(nodes)
add_subdirectory(util)